# my-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  MY_CLI.md  README.md  RELEASE.md  SEARCH_APIS.md  SUBAGENTS.md  TODO.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  debug-specialist.md
scripts/: build.py  debug_gemini_conversation.py  manual_tool_test.py
src/my_cli/: __init__.py  __main__.py
src/my_cli/cli/: __init__.py  app.py  enhanced_chat.py
src/my_cli/cli/commands/: __init__.py
src/my_cli/cli/themes/: __init__.py
src/my_cli/cli/ui/: __init__.py
src/my_cli/config/: __init__.py  env_loader.py  hierarchical.py  settings.py
src/my_cli/core/: __init__.py  client.py  config.py  container.py
src/my_cli/core/auth/: __init__.py
src/my_cli/core/client/: __init__.py  content_generator.py  errors.py  gemini_client.py  kimi_generator.py  provider_factory.py  providers.py  retry.py  streaming.py  token_manager.py  turn.py
src/my_cli/core/function_calling/: __init__.py  agentic_orchestrator.py  agentic_turn.py  confirmation_ui.py  conversation_orchestrator.py  function_parser.py  function_response_converter.py  gemini_schema_generator.py  kimi_schema_generator.py  result_processor.py  schema_generator.py  tool_executor.py
src/my_cli/core/memory/: __init__.py
src/my_cli/core/prompts/: __init__.py  autonomous_patterns.py  system_prompt.py
src/my_cli/core/subagents/: __init__.py  builtin.py  delegator.py  demo.py  types.py
src/my_cli/mcp/: __init__.py
src/my_cli/prompts/: __init__.py  registry.py
src/my_cli/services/: __init__.py  file_discovery.py  git_service.py  workspace.py
src/my_cli/tools/: __init__.py  base.py  registry.py  scheduler.py  types.py
src/my_cli/tools/core/: __init__.py  edit_file.py  list_directory.py  read_file.py  shell.py  write_file.py
src/my_cli/tools/file_system/: __init__.py
src/my_cli/tools/search/: __init__.py  glob_tool.py  grep_tool.py
src/my_cli/tools/shell/: __init__.py
src/my_cli/tools/web/: __init__.py  google_web_search_tool.py  web_fetch_tool.py  web_search_tool.py
src/my_cli/ui/: __init__.py  confirmation.py
src/my_cli/utils/: __init__.py
tests/: README.md  __init__.py  test_kimi_integration.py  test_phase_2_1_integration.py
tests/debug/: debug_conversation_history.py  debug_kimi_tools.py  debug_moonshot_api.py  debug_tool_schema.py
tests/integration/: test_function_calling.py  test_kimi_tool_calling.py  test_multi_step_function_calling.py  test_native_gemini_function_calling.py
tests/unit/: test_autonomous_patterns.py  test_container.py  test_prompt_registry.py  test_settings.py  test_tools.py
